--- a/index.html
+++ b/index.html
@@ -13,11 +13,27 @@
 <body>
 	<header>
 		<div id = "navbar">
-			<a href = #>Home</a>
-			<a href = #>Hobbies</a>
-			<a href = #>About</a>
+			<a>Home</a>
+			<a href = "hobbies/hobbies">Hobbies</a>
+			<a href = "about/about">About</a>
 		</div>
 		<h1>Home</h>
 		<hr>
 	</header>
+	<div id = "container">
+		<div class = "VES">
+			<p></p>
+			<img src="images/Goal_VES.png" alt="VES Headquarters">
+		</div>
+		<hr>
+		<div class = "BOOT">
+			<img src="images/Goal_LeatherWork.jpg" alt="Homemade Leather Boot">
+			<p></p>
+		</div>
+		<hr>
+		<div class = "MusicFestival">
+			<p></p>
+			<img src="images/Goal_Concert.jpg" alt="Marco at a Music Festival">
+		</div>
+	</div>
 </body>
