--- a/About/about.html
+++ b/About/about.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>CSD 340 Web Development with HTML and CSS</title>
+	<title>bioSite</title>
 	<meta http-equiv="author" content="Joshua Kelbley" />
 	<meta name="description" content="Assignment 6.3 for CSD-340" />
 	<meta name="keywords" content="homework, assignment 6.3" />
@@ -13,16 +13,16 @@
 <body>
 	<header>
 		<div id = "navbar">
-			<a href = #>Home</a>
+			<a href = https://jkelbley1.github.io/bioSite/>Home</a>
 			<a href = #>Hobbies</a>
-			<a href = #>About</a>
+			<a>About</a>
 		</div>
 		<h1>Marco Zaragoza</h>
 		<hr>
 	</header>
 	<div id = "container">
 		<div class = "Marco">
-			<img src="images/Portrait_Marco.jpg" alt="Marco">
+			<img src="Images/Portrait_Marco.jpg" alt="Marco">
 			<p></p>
 		</div>
 	</div>
