--- a/Hobbies/hobbies.html
+++ b/Hobbies/hobbies.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>CSD 340 Web Development with HTML and CSS</title>
+	<title>bioSite</title>
 	<meta http-equiv="author" content="Joshua Kelbley" />
 	<meta name="description" content="Assignment 6.3 for CSD-340" />
 	<meta name="keywords" content="homework, assignment 6.3" />
@@ -13,7 +13,7 @@
 <body>
 	<header>
 		<div id = "navbar">
-			<a href = #>Home</a>
+			<a href = "https://jkelbley1.github.io/bioSite/">Home</a>
 			<a>Hobbies</a>
 			<a href = #>About</a>
 		</div>
@@ -22,16 +22,16 @@
 	</header>
 	<div id = "container">
 		<div class = "Cooking">
-			<img src="images/Hobby_Cooking.png" alt="Bacon Wrapped Jalapeños">
+			<img src="Images/Hobby_Cooking.png" alt="Bacon Wrapped Jalapeños">
 			<p></p>
 		</div>
 		<div class = "Vertical Line"></div>
 		<div class = "Baking">
-			<img src="images/Hobby_Baking.jpg" alt="Decorated Sugar Cookies">
+			<img src="Images/Hobby_Baking.jpg" alt="Decorated Sugar Cookies">
 			<p></p>
 		</div>
 		<div class = "Izzy">
-			<img src="images/Hobby_Izzy.jpg" alt="Izzy the German Shepherd">
+			<img src="Images/Hobby_Izzy.jpg" alt="Izzy the German Shepherd">
 			<p></p>
 		</div>
 	</div>
