--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>CSD 340 Web Development with HTML and CSS</title>
+	<title>bioSite</title>
 	<meta http-equiv="author" content="Joshua Kelbley" />
 	<meta name="description" content="Assignment 6.3 for CSD-340" />
 	<meta name="keywords" content="homework, assignment 6.3" />
@@ -14,8 +14,8 @@
 	<header>
 		<div id = "navbar">
 			<a>Home</a>
-			<a href = "hobbies/hobbies">Hobbies</a>
-			<a href = "about/about">About</a>
+			<a href = "Hobbies/hobbies">Hobbies</a>
+			<a href = "About/about">About</a>
 		</div>
 		<h1>Home</h>
 		<hr>
@@ -23,17 +23,17 @@
 	<div id = "container">
 		<div class = "VES">
 			<p></p>
-			<img src="images/Goal_VES.png" alt="VES Headquarters">
+			<img src="Images/Goal_VES.png" alt="VES Headquarters">
 		</div>
 		<hr>
 		<div class = "BOOT">
-			<img src="images/Goal_LeatherWork.jpg" alt="Homemade Leather Boot">
+			<img src="Images/Goal_LeatherWork.jpg" alt="Homemade Leather Boot">
 			<p></p>
 		</div>
 		<hr>
 		<div class = "MusicFestival">
 			<p></p>
-			<img src="images/Goal_Concert.jpg" alt="Marco at a Music Festival">
+			<img src="Images/Goal_Concert.jpg" alt="Marco at a Music Festival">
 		</div>
 	</div>
 </body>
