--- a/About/about.html
+++ b/About/about.html
@@ -13,8 +13,8 @@
 <body>
 	<header>
 		<div id = "navbar">
-			<a href = https://jkelbley1.github.io/bioSite/>Home</a>
-			<a href = #>Hobbies</a>
+			<a href = "https://jkelbley1.github.io/bioSite/">Home</a>
+			<a href = "https://jkelbley1.github.io/bioSite/Hobbies/hobbies">Hobbies</a>
 			<a>About</a>
 		</div>
 		<h1>Marco Zaragoza</h>
@@ -23,7 +23,7 @@
 	<div id = "container">
 		<div class = "Marco">
 			<img src="Images/Portrait_Marco.jpg" alt="Marco">
-			<p></p>
+			<p>This Needs Scaled</p>
 		</div>
 	</div>
 </body>
