--- a/Hobbies/hobbies.html
+++ b/Hobbies/hobbies.html
@@ -15,7 +15,7 @@
 		<div id = "navbar">
 			<a href = "https://jkelbley1.github.io/bioSite/">Home</a>
 			<a>Hobbies</a>
-			<a href = #>About</a>
+			<a href = "https://jkelbley1.github.io/bioSite/About/about">About</a>
 		</div>
 		<h1>Hobbies</h>
 		<hr>
@@ -23,16 +23,16 @@
 	<div id = "container">
 		<div class = "Cooking">
 			<img src="Images/Hobby_Cooking.png" alt="Bacon Wrapped Jalapeños">
-			<p></p>
+			<p>This Needs Scaled</p>
 		</div>
 		<div class = "Vertical Line"></div>
 		<div class = "Baking">
 			<img src="Images/Hobby_Baking.jpg" alt="Decorated Sugar Cookies">
-			<p></p>
+			<p>This Needs Scaled</p>
 		</div>
 		<div class = "Izzy">
 			<img src="Images/Hobby_Izzy.jpg" alt="Izzy the German Shepherd">
-			<p></p>
+			<p>This Needs Scaled</p>
 		</div>
 	</div>
 </body>
