--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
 	</header>
 	<div id = "container">
 		<div class = "VES">
-			<p></p>
+			<p>This Needs Scaled</p>
 			<img src="Images/Goal_VES.png" alt="VES Headquarters">
 		</div>
 		<hr>
 		<div class = "BOOT">
 			<img src="Images/Goal_LeatherWork.jpg" alt="Homemade Leather Boot">
-			<p></p>
+			<p>This Needs Scaled</p>
 		</div>
 		<hr>
 		<div class = "MusicFestival">
-			<p></p>
+			<p>This Needs Scaled</p>
 			<img src="Images/Goal_Concert.jpg" alt="Marco at a Music Festival">
 		</div>
 	</div>
