--- a/About/about.html
+++ b/About/about.html
@@ -8,7 +8,7 @@
 	<meta name="keywords" content="homework, assignment 6.3" />
 	<meta http-equiv="pragma" content="no-cache" />
 
-	<link rel="stylesheet" href="cssStyle.css"/>
+	<link rel="stylesheet" href="about.css"/>
 </head>
 <body>
 	<header>
