--- a/index.html
+++ b/index.html
@@ -9,31 +9,38 @@
 	<meta http-equiv="pragma" content="no-cache" />
 
 	<link rel="stylesheet" href="index.css"/>
+	<link rel="stylesheet" href="Fonts\Poppins-Thin.ttf"/>
 </head>
 <body>
 	<header>
 		<div id = "navbar">
 			<a>Home</a>
-			<a href = "Hobbies/hobbies">Hobbies</a>
-			<a href = "About/about">About</a>
+			<a href = "Hobbies/hobbies" target="_blank">Hobbies</a>
+			<a href = "About/about" target="_blank">About</a>
 		</div>
 		<h1>Home</h>
 		<hr>
 	</header>
 	<div id = "container">
 		<div class = "VES">
-			<p>This Needs Scaled</p>
+			<div class = "text">
+				<p>After graduating college, Marco got a job at VES solutions. VES specializes in software infrastructure development, embedded platform and command post systems, and prototyping emerging technologies. For more information on VES, you can check out their website <a href = "https://www.ves.solutions/" target="_blank"> here</a>.</p>
+			</div>
 			<img src="Images/Goal_VES.png" alt="VES Headquarters">
 		</div>
 		<hr>
 		<div class = "BOOT">
 			<img src="Images/Goal_LeatherWork.jpg" alt="Homemade Leather Boot">
-			<p>This Needs Scaled</p>
+			<div class = "text">
+				<p> Marco decided to try his hand at leatherwork as a winter hobby to help pass up the time. Pictured to the left is a leather boot that he has been working on in his spare time. As Febuary 1, 2024, Marco completed his work on his pair of boots. It took him about 40 hours of labor to complete.</p>
+			</div>
 		</div>
 		<hr>
 		<div class = "MusicFestival">
-			<p>This Needs Scaled</p>
-			<img src="Images/Goal_Concert.jpg" alt="Marco at a Music Festival">
+			<div class = "text">
+				<p> Marco has been attending Inkcarceration for the last two years. Inkcarceration is a rock music festival held by the Ohio State Reformatory in Mansfield, Ohio. He plans on visiting Inkcarceration for many years to come.</p>
+			</div>
+			<img src="Images/Goal_Concert.jpg" alt="Marco at Inkcarceration">
 		</div>
 	</div>
 </body>
