--- a/Hobbies/hobbies.html
+++ b/Hobbies/hobbies.html
@@ -13,26 +13,29 @@
 <body>
 	<header>
 		<div id = "navbar">
-			<a href = "https://jkelbley1.github.io/bioSite/">Home</a>
+			<a href = "https://jkelbley1.github.io/bioSite/" target="_blank">Home</a>
 			<a>Hobbies</a>
-			<a href = "https://jkelbley1.github.io/bioSite/About/about">About</a>
+			<a href = "https://jkelbley1.github.io/bioSite/About/about" target="_blank">About</a>
 		</div>
 		<h1>Hobbies</h>
 		<hr>
 	</header>
 	<div id = "container">
-		<div class = "Cooking">
-			<img src="Images/Hobby_Cooking.png" alt="Bacon Wrapped Jalapeños">
-			<p>This Needs Scaled</p>
+		<div class = "horizontal">
+			<div class = "Cooking">
+				<img src="Images/Hobby_Cooking.png" alt="Bacon Wrapped Jalape&ntildeos">
+				<p>As a person who loves spicy food, Marco loves to cook items that will fuel that fire. Pictured above are some homemade bacon-wrapped jalape&ntildeos, while not the spiciest, were delicious nonetheless.</p>
+			</div>
+			<div class = "Vertical_Line"></div>
+			<div class = "Baking">
+				<img src="Images/Hobby_Baking.jpg" alt="Decorated Sugar Cookies">
+				<p>Baking is also a hobby for not only Marco, but myself too. We like to compare baked dishes each other have made, trying to out-do the other. Pictured above is some frosted sugar cookies he made for a party at a friends house.</p>
+			</div>
 		</div>
-		<div class = "Vertical Line"></div>
-		<div class = "Baking">
-			<img src="Images/Hobby_Baking.jpg" alt="Decorated Sugar Cookies">
-			<p>This Needs Scaled</p>
-		</div>
+		<hr>
 		<div class = "Izzy">
 			<img src="Images/Hobby_Izzy.jpg" alt="Izzy the German Shepherd">
-			<p>This Needs Scaled</p>
+			<p class = "Izzy_text">Izzy is Marco's pride and joy. She is a 7-year-old German Shepherd he got while still in college. Izzy not only helps keep Marco company, but also encourages him to stay in shape by going on walks, runs and playing fetch daily. Pictured on the left, Izzy is getting into the holiday spirit with her collar of sleigh bells.</p>
 		</div>
 	</div>
 </body>
