--- a/About/about.html
+++ b/About/about.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>bioSite</title>
+	<title>Marco's bioSite</title>
 	<meta http-equiv="author" content="Joshua Kelbley" />
 	<meta name="description" content="Assignment 6.3 for CSD-340" />
 	<meta name="keywords" content="homework, assignment 6.3" />
@@ -23,11 +23,14 @@
 	<div id = "container">
 		<div class = "Marco">
 			<img src="Images/Portrait_Marco.jpg" alt="Marco">
-			<p>Marco, a Computer Science and Engineering Technologies graduate, initially chose his career path somewhat serendipitously. During high school, a job shadowing assignment guided him toward a field with promising pay, leading him to pursue this degree. His favorite college project involved developing a database system for CNC machines, showcasing his technical prowess.</p>
-			<p>Beyond the tech world, Marco found a passion for baking, considering it a valuable and impressive skill. He recommends trying recipes for your commonly enjoyed takeout dishes. He emphasized the allure of homemade pizza, being one of his favorites to make.</p>
-			<p>When it comes to leisure, Marco enthusiastically attends concerts and festivals. The competition for his favorite is fierce, with Lindsey Stirling's mesmerizing performances and the Swedish instrumental band, Apocalyptica, offering unforgettable experiences. A standout memory is witnessing Sick Puppies at Inkcarceration, a performance that electrified the audience and coincided with the drummer's birthday. One item on his bucket list is to attend a System of a Down concert, drawn by the band's recent reunion sparked by political events in Armenia.</p>
-			<p>Apart from his tech and entertainment interests, Marco also enjoys spending time with his companion, a German Shepherd named Izzy. His favorite activities with her include cuddling and going on runs. Izzy's favorite pastime is playing a game of fetch.</p>
-			<p>During the winter, Marco has started to delve into leatherwork as a hobby. So far, he has crafted two wallets and is currently working on a pair of boots. He appreciates the tactile and creative outlet this hobby provides.</p>
+			<br>
+			<div class = "text">			
+				<p>Marco, a Computer Science and Engineering Technologies graduate, initially chose his career path somewhat serendipitously. During high school, a job shadowing assignment guided him toward a field with promising pay, leading him to pursue this degree. His favorite college project involved developing a database system for CNC machines, showcasing his technical prowess.</p>
+				<p>Beyond the tech world, Marco found a passion for baking, considering it a valuable and impressive skill. He recommends trying recipes for your commonly enjoyed takeout dishes. He emphasized the allure of homemade pizza, being one of his favorites to make.</p>
+				<p>When it comes to leisure, Marco enthusiastically attends concerts and festivals. The competition for his favorite is fierce, with Lindsey Stirling's mesmerizing performances and the Swedish instrumental band, Apocalyptica, offering unforgettable experiences. A standout memory is witnessing Sick Puppies at Inkcarceration, a performance that electrified the audience and coincided with the drummer's birthday. One item on his bucket list is to attend a System of a Down concert, drawn by the band's recent reunion sparked by political events in Armenia.</p>
+				<p>Apart from his tech and entertainment interests, Marco also enjoys spending time with his companion, a German Shepherd named Izzy. His favorite activities with her include cuddling and going on runs. Izzy's favorite pastime is playing a game of fetch.</p>
+				<p>During the winter, Marco has started to delve into leatherwork as a hobby. So far, he has crafted two wallets and is currently working on a pair of boots. He appreciates the tactile and creative outlet this hobby provides.</p>
+			</div>
 		</div>
 	</div>
 </body>
