--- a/Hobbies/hobbies.html
+++ b/Hobbies/hobbies.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>bioSite</title>
+	<title>Marco's bioSite</title>
 	<meta http-equiv="author" content="Joshua Kelbley" />
 	<meta name="description" content="Assignment 6.3 for CSD-340" />
 	<meta name="keywords" content="homework, assignment 6.3" />
@@ -24,18 +24,24 @@
 		<div class = "horizontal">
 			<div class = "Cooking">
 				<img src="Images/Hobby_Cooking.png" alt="Bacon Wrapped Jalape&ntildeos">
-				<p>As a person who loves spicy food, Marco loves to cook items that will fuel that fire. Pictured above are some homemade bacon-wrapped jalape&ntildeos, while not the spiciest, were delicious nonetheless.</p>
+				<div class = "cooking_text">
+					<p>As a person who loves spicy food, Marco loves to cook items that will fuel that fire. Pictured above are some homemade bacon-wrapped jalape&ntildeos, while not the spiciest, were delicious nonetheless.</p>
+				</div>
 			</div>
 			<div class = "Vertical_Line"></div>
 			<div class = "Baking">
 				<img src="Images/Hobby_Baking.jpg" alt="Decorated Sugar Cookies">
-				<p>Baking is also a hobby for not only Marco, but myself too. We like to compare baked dishes each other have made, trying to out-do the other. Pictured above is some frosted sugar cookies he made for a party at a friends house.</p>
+				<div class = "baking_text">
+					<p>Baking is also a hobby for not only Marco, but myself too. We like to compare baked dishes each other have made, trying to out-do the other. Pictured above is some frosted sugar cookies he made for a party at a friends house.</p>
+				</div>
 			</div>
 		</div>
 		<hr>
 		<div class = "Izzy">
 			<img src="Images/Hobby_Izzy.jpg" alt="Izzy the German Shepherd">
-			<p class = "Izzy_text">Izzy is Marco's pride and joy. She is a 7-year-old German Shepherd he got while still in college. Izzy not only helps keep Marco company, but also encourages him to stay in shape by going on walks, runs and playing fetch daily. Pictured on the left, Izzy is getting into the holiday spirit with her collar of sleigh bells.</p>
+			<div class = "izzy_text">
+				<p>Izzy is Marco's pride and joy. She is a 7-year-old German Shepherd he got while still in college. Izzy not only helps keep Marco company, but also encourages him to stay in shape by going on walks, runs and playing fetch daily. Pictured on the left, Izzy is getting into the holiday spirit with her collar of sleigh bells.</p>
+			</div>
 		</div>
 	</div>
 </body>
