--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>bioSite</title>
+	<title>Marco's bioSite</title>
 	<meta http-equiv="author" content="Joshua Kelbley" />
 	<meta name="description" content="Assignment 6.3 for CSD-340" />
 	<meta name="keywords" content="homework, assignment 6.3" />
